--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-This site is not setup properly if you can see this.
+Ohh nee-chan give me a kissy &lt;3
+
+<a href="https://miyo.lol/">Moi site &gt;:3</a>
